Makes scroll bar thickness consistent, fixes sidebar resize grabber overlapping with scrollbar on lefthand sidebar
Fixes #344

--- a/scss/_chat.scss
+++ b/scss/_chat.scss
@@ -107,7 +107,7 @@
   .resize-handle {
     position: absolute;
     top: 0;
-    width: 8px;
+    width: 3px;
     height: 100%;
     cursor: ew-resize;
     z-index: 10;
