--- a/scss/themes/_chat.scss
+++ b/scss/themes/_chat.scss
@@ -115,7 +115,8 @@
   }
 
   &::-webkit-scrollbar {
-    width: 12px;
+    width: 8px;
+    height: 8px;
   }
 
   &::-webkit-scrollbar-thumb {
