--- a/scss/themes/chat/dark dimmed.scss
+++ b/scss/themes/chat/dark dimmed.scss
@@ -15,7 +15,7 @@
   }
 
   &::-webkit-scrollbar {
-    width: 12px;
+    width: 8px;
   }
 
   &::-webkit-scrollbar-thumb {
