--- a/scss/themes/chat/mars.scss
+++ b/scss/themes/chat/mars.scss
@@ -47,7 +47,7 @@ body,
   }
 
   &::-webkit-scrollbar {
-    width: 12px;
+    width: 8px;
   }
 
   &::-webkit-scrollbar-thumb {
