--- a/scss/themes/chat/wilted-rose.scss
+++ b/scss/themes/chat/wilted-rose.scss
@@ -50,7 +50,7 @@ body,
   }
 
   &::-webkit-scrollbar {
-    width: 12px;
+    width: 8px;
   }
 
   &::-webkit-scrollbar-thumb {
